--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Winter","description":"Enjoy the 'Cool' Theme","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"Winter","description":"Enjoy the 'Cool' Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
 
 .app,.bda-backdrop,#pubs-container:before {
 	background-image: url("https://wallpapercave.com/wp/aHXgonf.jpg") !important;
@@ -427,7 +427,7 @@
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 .connectedAccountName-3EFj01 {
@@ -438,7 +438,7 @@
 .bodyTitle-18hsd9 {
    color: white;
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
      background: rgba(0,0,65,0.3);
 }
 .theme-dark .note-2AtC_s textarea:focus {
@@ -1001,7 +1001,7 @@ background: transparent;
 .lighten-bXgwKO {
     opacity: 1;
 }
-.theme-dark .ui-select>.Select .Select-menu-outer {
+.theme-dark .select-3JqNgs .Select-menu-outer {
     background: rgba(0,0,195,0.6);
     border-color: white;
 }
@@ -1317,10 +1317,10 @@ form, .member:hover {
    background: #0000b3;
    color: white !important;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
