--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"ChocolaTheme","description":"Just an average Chocola Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"ChocolaTheme","description":"Just an average Chocola Theme","author":"DevilsTheAvenged","version":"2"}*//{}
 .app,
 .callout-backdrop,
 .bda-backdrop,
@@ -1153,7 +1153,7 @@ form,
     background-color: #654e58;
     border: 3px inset rgba(255, 255, 255,.6);
 }
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border: 3px solid rgba(255,255,255,0.4);
     background-color: #47383e;
 }
@@ -1435,7 +1435,7 @@ form,
     background-color: #725a5f;
     border: 2px solid rgba(255,255,255,0.5);
 }
-.channel-members .member .member-activity-text {
+.activityText-258pdj{
     color: white;
 }
 .theme-dark .channel-members h2 {
@@ -1569,7 +1569,7 @@ form,
     height: 40px;
     background-size: cover;
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
    background: linear-gradient(90deg,#473838 85%,rgba(255,255,255,0.4));
 }
 .theme-dark .channel-members .member {
