--- a/DoritosTheme.theme.css
+++ b/DoritosTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"DoritosTheme","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"DoritosTheme","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"2"}*//{}
 @import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/edc4ddcb/SomeUnImportantStuff/Doritos2.theme.css);
 /* Backgrounds */
 .app {
@@ -166,7 +166,7 @@
     color: white;
     text-transform: uppercase;
 }
-.protip {
+.theme-dark .protip-q743VF {
    display: none;
 }
 .theme-dark .footer-2wFs91 {
@@ -821,7 +821,7 @@ border-color: #FFBB10 !important;
 .buttonLinkLink-PqcWoA {
     color: #FFBB10;
 }
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border-color: #FFBB10;
 }
 .theme-dark .itemDefault-3NDwnY {
@@ -1206,7 +1206,7 @@ background-color: #b00306;
     font-weight: 400;
     line-height: 13px;
 }
-.channel-members .member .member-activity strong {
+.activity-1PAe08 strong{
     color:  #FFBB10;
 }
 .ui-standard-sidebar-view #editor-detached button {
@@ -1483,7 +1483,7 @@ input[type="checkbox" i][value*="on"] {
 	height: 100%;
 	width: 100%;
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,rgb(40, 43, 48) 85%,rgb(47, 49, 54));
 }
 .theme-dark .friends-table .messages .divider:before, .theme-dark .friends-table .messages .divider span, .theme-dark .messages-wrapper .messages .divider:before, .theme-dark .messages-wrapper .messages .divider span {
@@ -2229,7 +2229,7 @@ background: #730000 !important;
 .theme-dark .message-group .comment .edited {
     color: rgba(255, 255, 255, 0.6);
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,black 85%,#FFBB10);
 }
 /* Popup Menu */
