--- a/EpicBubbleTheme.theme.css
+++ b/EpicBubbleTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"The_Epic_Bubble_Theme","description":"Neat Bubble Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"The_Epic_Bubble_Theme","description":"Neat Bubble Theme","author":"DevilsTheAvenged","version":"2"}*//{}
 
 .app,
 .callout-backdrop,
@@ -531,36 +531,36 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
     border: 3px solid rgba(231, 254, 255,.6);
     background-color: 3px solid rgba(231, 254, 255,.3);
 }
- .theme-dark .channel-members .member:hover {
+ .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: rgba(255, 0 , 0,0.3) !important;
     border: 2px solid rgba(255, 0 , 0,0.5) !important;
     border-radius: 50px;
 }
- .theme-dark .channel-members .member:hover:nth-child(2n) {
+ .theme-dark .member-2FrNV0:hover:nth-child(2n) .content-3JzEqq {
     background: rgba(255, 127, 0,0.3) !important;
     border: 2px solid rgba(255, 127, 0,0.5) !important;
 }
- .theme-dark .channel-members .member:hover:nth-child(3n) {
+ .theme-dark .member-2FrNV0:hover:nth-child(3n) .content-3JzEqq {
     background: rgba(255, 255, 0,0.3) !important;
     border: 2px solid rgba(255, 255, 0,0.5) !important;
 }
- .theme-dark .channel-members .member:hover:nth-child(4n) {
+ .theme-dark .member-2FrNV0:hover:nth-child(4n) .content-3JzEqq {
     background: rgba(0, 255, 0,0.3) !important;
     border: 2px solid rgba(0, 255, 0,0.5) !important;
 }
- .theme-dark .channel-members .member:hover:nth-child(5n) {
+ .theme-dark .member-2FrNV0:hover:nth-child(5n) .content-3JzEqq {
     background: rgba(0, 0, 255,0.3) !important;
     border: 2px solid rgba(0, 0, 255,0.5) !important;
 }
- .theme-dark .channel-members .member:hover:nth-child(6n) {
+ .theme-dark .member-2FrNV0:hover:nth-child(6n) .content-3JzEqq {
     background: rgba(75, 0, 130,0.3) !important;
     border: 2px solid rgba(75, 0, 130,0.5) !important;
 }
- .theme-dark .channel-members .member:hover:nth-child(7n) {
+ .theme-dark .member-2FrNV0:hover:nth-child(7n) .content-3JzEqq {
     background: rgba(148, 0, 211,0.3) !important;
     border: 2px solid rgba(148, 0, 211,0.5) !important;
 }
-.theme-dark .channel-members .member.popout-open {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq {
     background: rgba(0, 255, 0,0.3) !important;
     border: 2px solid rgba(0, 255, 0,0.5) !important;
     border-radius: 50px;
@@ -904,7 +904,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
 .theme-dark .topic-1KFf6J,.channel-members .member .member-activity-text,.theme-dark .channelName-1G03vu, .theme-dark .groupDM-3gzbyG .channelName-1G03vu, .theme-dark .groupDMManaged-2z2S1A .channelName-1G03vu,.channelIcon-1KtcMW,.name-3gtcmp {
     color: white;
 }
-.channel-members .member .member-activity-icon-foreground {
+.theme-dark .activityIconForeground-1o4t0w {
     fill: white;
 }
 .theme-dark .message-group .comment .edited {
@@ -1452,7 +1452,7 @@ color: white !important;
 .theme-dark .h5-3KssQU {
     color: white;
 }
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border: none;
     background: rgba(0,0,0,0.7) !important;
 }
@@ -1892,7 +1892,7 @@ color: white !important;
     background: rgba(255,255,255,0.3) !important;
     border: none;
 }
-.protip {
+.theme-dark .protip-q743VF {
     display: none;
 }
 .theme-dark .quickMessage-OCo-Q0 {
