--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NoGameNoLife_Theme","description":"I hope you enjoy the theme","author":"DevilsTheAvenged","version":"1.0"}*//{}
+//META{"name":"NoGameNoLife_Theme","description":"I hope you enjoy the theme","author":"DevilsTheAvenged","version":"1.1"}*//{}
 .app {
 	background: url("https://wallpapercave.com/wp/wp1825485.jpg") 0/cover !important;
 }
@@ -643,15 +643,15 @@ a,
     color: red;
     opacity: 1;
 }
-.channel-members .member .member-activity strong {
+.activity-1PAe08 strong{
     background: #4F1C4F;
     padding: 3px 4px;
 }
-.channel-members .member .member-activity-text {
+.activityText-258pdj{
     color: white;
     margin-top: 2px;
 }
-.channel-members .member .member-activity-icon-foreground {
+.theme-dark .activityIconForeground-1o4t0w {
     fill: #4F1C4F;
 }
 .theme-dark .channel-members h2 {
@@ -1401,7 +1401,7 @@ a,
     border-radius: 10px;
 }
 .theme-dark .input-2YozMi.focused-xL_GX6,
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border-color: #84003B;
     background-color: rgba(0,0,0,0.4);
 }
@@ -1598,8 +1598,7 @@ a,
 }
 /* User Profile Popout and User Modal */
 
-.theme-dark .channel-members .member.popout-open, 
-.theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: #4F1C4F;
     border: 2px solid #840058;
 }
@@ -1627,7 +1626,7 @@ a,
    background-color: black !important;
    border: 2px solid #890052;
 }
-.protip-q743VF {
+.theme-dark .protip-q743VF-q743VF {
     display: none;
 }
 .bodyTitle-18hsd9,
