--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Rem_Theme","description":"Team Rem Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"Rem_Theme","description":"Team Rem Theme","author":"DevilsTheAvenged","version":"2"}*//{}
 /* Backgrounds */
 .app,#pubs-container:before {
 	background-image: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
@@ -37,11 +37,11 @@
     text-align: center;
 	
 }
-.channel-members .member .member-activity strong {
+.activity-1PAe08 strong{
 	font-weight: normal;
 	color: rgb(159, 195, 245);
 }
-.channel-members .member .member-activity-text {
+.activityText-258pdj{
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -137,7 +137,7 @@
   opacity: 0;
   }
  } 
- .theme-dark .input-2YozMi:focus {
+ .theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
 	border-color: #9fc3f5;
 }
 
@@ -2025,7 +2025,7 @@ color: white;
 .theme-dark .message-group .comment .edited {
     color: rgba(255, 255, 255, 0.6);
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,black 85%,#2A5988);
 }
 /* Popup Menu */
